Fix heading alignment

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -104,12 +104,6 @@
       line-height: 120%;
       color: #333436;
     }
-    .team {
-      position: absolute;
-      width: 100%;
-      height: 50%;
-      bottom: 13%;
-    }
       .picture-1 {
         position: relative;
         top: 25%;
